<resources>
    <string name="app_name">Pi_Control</string>

    <string name="et_ip_hint">IP:</string>
    <string name="et_port_hint">PORT:</string>
    <string name="connect">Connect</string>
    <string name="interrupt">Interrupt</string>
    <string name="connect_fail">Connect Fail:</string>
    <string name="ip_blank">IP Must not be blank</string>

    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>





</resources>